turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:5: error: not found: value PI
	 droite(180-PI)}
                    ^